2021-06-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

2021-06-10  Vitalie Spinu <spinuvit@gmail.com>

	* R/debug_string.R: Support extra toJSON format arguments
	* R/00classes.R: Idem
	* src/wrapper_Message.cpp: Idem
	* src/init.c: Idem
	* man/Message-class.Rd: Document new parameters

2021-06-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL): Add package page to URL field

2021-01-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): Roll minor version and date

	* DESCRIPTION (Imports): Remove RCurl used for rpc
	* NAMESPACE: Remove 'rpc' class and 'invoke' method
	* R/00classes.R: Comment-out removed class and method
	* deprecated/R/http.handler.R: Moved from R/
	* deprecated/R/rpc.R: Idem
	* deprecated/man/RpcHTTP-class.Rd: Moved from man/
	* deprecated/man/invokeLocally.Rd: Idem
	* .Rbuildignore: Added deprecated/

        * .github/workflows/ci.yaml: Add CI runner using r-ci
	* README.md: Add new badge

2020-08-16  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Added JSS badge

2020-06-15  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Switch to bionic, change to derive package and version

2020-05-28  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

2020-05-28  Adam Cozzette  <acozzette@google.com>

	* src/wrapper_ServiceDescriptor.cpp: Support FindMethodByName() taking
	std::string_view
	* src/RcppMacros.h: Idem

2020-03-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.4.17

	* README.md: Add a last-commit badge

2020-03-21  Dirk Eddelbuettel  <edd@debian.org>

	* src/wrapper_Message.cpp: Condition use of ByteSizeLong on ProtoBuf
	version 3.6.0 or later to permit compilation on older systems

	* inst/tinytest/test_addressbook.R: Skip JSON tests if ProtoBuf 2.*

	* configure.ac: Extract version from DESCRIPTION via awk
	* configure: Regenerated

2020-03-19  Dirk Eddelbuettel  <edd@debian.org>
